
  * debian/copyright: Update to current reality. (Closes: #474176)
  * Drop usage of dh_movefiles, rename the remaining debian/*.files to
    debian/*.install. This also brings back the lost
    /usr/lib/cups/daemon/cups-lpd.
  * debian/libcupsimage2-dev.install: Add cups/i18n.h from upstream (not
    installed by upstream Makefiles any more). (LP: #474922)

 -- Martin Pitt <mpitt@debian.org>  Tue, 22 Apr 2008 12:11:48 +0200

cupsys (1.3.7-2) unstable; urgency=high

  [ Martin Pitt ]
  * debian/control: Add missing build dependency lsb-release. (LP: #211375)
    Also wrap long fields, so that they are easier to edit.
  * Drop pdftops-wait-eintr.dpatch, an improved version has been committed
    upstream. Integrate the upstream solution into pdftops-cups-1.4.dpatch.
  * Add pdftops-dont_fail_on_cancel.dpatch: Fix behavioural change in patch
    from STR #2780 which broke the test suite: When a job is cancelled, do not
    report a failure in the exit code of pdftops.
  * Rebuild against fixed debhelper to properly compress manpages again (see
    #470913). (Closes: #475887, #476495)

  [ Nico Golde ]
  * Add debian/patches/CVE-2008-1722.dpatch: Two integer overflows in png
    image filter allow a denial of service attack and possibly arbitrary code
    execution. [STR #2790, CVE-2008-1722] (Closes: #476305).

 -- Martin Pitt <mpitt@debian.org>  Mon, 21 Apr 2008 19:06:55 +0200

cupsys (1.3.7-1) unstable; urgency=medium

  * Urgency medium due to security fix.
  * New upstream bugfix/security update release. For a detailled list of
    changes see http://www.cups.org/articles.php?L537.
    - CUPS GIF image filter overflow [CVE-2008-1373, STR #2765].
  * Drop patches which are now upstream:
    - cgiCompileSearch_buffer_overflow.dpatch
    - testsuite-exit-code.dpatch
    - pbmprint.dpatch
  * search_mime_files_in_usr_share.dpatch: Drop log message about missing
    /usr/share/cups/mime/ from error to info, since it is not really an