@@ -46,11 +46,6 @@ clean::
 common-install-prehook-impl::
 	(cd fonts && $(MAKE) install BUILDROOT=$(DEB_DESTDIR))
 
-$(patsubst %,install/%,$(DEB_ALL_PACKAGES)) :: install/%:
-	# install lintian overrides
-	L=debian/$(cdbs_curpkg).lintian; \
-	[ -e $$L ] && install -D -m 644 $$L debian/$(cdbs_curpkg)/usr/share/lintian/overrides/$(cdbs_curpkg) || true
-
 binary-post-install/cupsys::
 	(cd $(DEB_DESTDIR)/../cupsys/usr/share/doc/cupsys && ln -sf ../../cups/doc-root online-docs)
 
