@@ -6,8 +6,10 @@ cupsys (1.3.7-3) UNRELEASED; urgency=low
     /usr/lib/cups/daemon/cups-lpd.
   * debian/libcupsimage2-dev.install: Add cups/i18n.h from upstream (not
     installed by upstream Makefiles any more). (LP: #474922)
+  * debian/rules: Drop lintian magic, current debhelper (dh_lintian) and cdbs
+    support that now. Rename .lintian -> .lintian-overrides for this.
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 22 Apr 2008 12:11:48 +0200
+ -- Martin Pitt <mpitt@debian.org>  Tue, 22 Apr 2008 12:20:52 +0200
 
 cupsys (1.3.7-2) unstable; urgency=high
 
